# ledgera

./: .dockerignore  .env.example  .gitignore  manage.py  pyproject.toml
apps/audit/: admin.py  models.py
apps/banque/: admin.py  apps.py  forms.py  matching.py  models.py  selectors.py  services.py  urls.py  views.py
apps/comptabilite/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/core/: admin.py  decorators.py  middleware.py  models.py  permissions.py  services.py  views.py
apps/etats/: apps.py  selectors.py  tasks.py  urls.py  views.py
apps/fiscal/: admin.py  amorcage.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/immobilisations/: admin.py  amortissement.py  apps.py  exports.py  forms.py  models.py  selectors.py  services.py  tasks.py  urls.py  views.py
apps/imports_exports/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/referentiels/: admin.py  apps.py  models.py  services.py
apps/tenants/: admin.py  models.py
apps/tiers/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
static/css/: print.css
templates/: base.html  dashboard.html
templates/banque/: compte_form.html  compte_list.html  rapprochement.html  releve_import.html
templates/comptabilite/: cloture.html  grand_livre_tiers.html  piece_detail.html  (+2 more)
tests/: conftest.py
theme/: apps.py
(+133 files in other folders)
